# Thief-Fighters

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
app_image_build/: Makefile  build-app-image.sh
app_image_resources/: thief-fighters.desktop
data/: gamecontrollerdb.txt
data/fighter_assets/: char-profiles-registry.xml  char-registry.xml  dance-fighter-base.iqm
data/fighter_assets/moon_man/: moon-man-stats.xml
data/fighter_assets/moon_man/sounds/: moon-man-sounds.xml
data/fighter_assets/ophelia/: ophelia-frames-v1.xml  ophelia-stats.xml
data/fighter_assets/ophelia/sounds/: ophelia-sounds.xml
data/fighter_assets/randy/: randy-frames-v1.xml  randy-frames.xml  randy-stats.xml
data/fighter_assets/randy/sounds/: randy-sounds.xml
data/fighter_assets/shadow/: shadow-frames-v1.xml  shadow-stats.xml
data/fighter_assets/shadow/sounds/: shadow-sounds.xml
data/fighter_assets/sun_man/: sun-man-stats.xml
data/fighter_assets/sun_man/sounds/: sun-man-sounds.xml
data/fighter_assets/tina/: tina-stats.xml
data/fighter_assets/tina/sounds/: tina-sounds.xml
data/fighter_assets/w_bear/: w-bear-frames-v1.xml  w-bear-stats.xml
data/fighter_assets/w_bear/sounds/: w_bear-sounds.xml
data/fighter_assets/wasp/: wasp-stats.xml
data/fighter_assets/wasp/sounds/: wasp-sounds.xml
data/stage_assets/: stage-profiles-registry.xml  stage-registry.xml
data/stage_assets/city-sky-scrapper/: CREDITS.txt  city_sky_collisions.txt  city_sky_start.txt
data/stage_assets/outer-space/: CREDITS.txt  outer_space_collisions.txt  outer_space_start.txt
data/stage_assets/training_stage/: CREDITS.txt  training_map_collisions.txt  training_map_start.txt
data/world_assets/: world-registry.xml
data/world_assets/main_world/: main-world-level.xml  main-world-tilesheet-description.xml
src/: main.cpp
src/core/: ControllerInput.h  ControllerInputHandler.cpp  ControllerInputHandler.h  KeyboardInput.h  KeyboardTypingInputHandler.cpp  KeyboardTypingInputHandler.h  MouseInput.h  MouseInputHandler.cpp  MouseInputHandler.h  component.h  component_array.h  component_manager.h  coordinator.h  entity.h  entity_manager.h  system.h  system_manager.h
src/misc/: CharacterAssetManager.cpp  CharacterAssetManager.h  MediaLoader.cpp  MediaLoader.h  StageManager.cpp  StageManager.h  camera.h  camera_backup.h  char_media.h  char_selector.cpp  char_selector.h  char_sounds.h  game_mode_selector.cpp  game_mode_selector.h  general_sounds.h  globalvariables.cpp  globalvariables.h  level_maps.h  media.h  num_player_setter.cpp  num_player_setter.h  sound_media.cpp  sound_media.h  stage_selector.cpp  stage_selector.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  AttackPowerMechanicSystem.cpp  AttackPowerMechanicSystem.h  CameraSystem.cpp  CameraSystem.h  EnemySystem.cpp  EnemySystem.h  InputReactorSystem.cpp  InputReactorSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerDeathSystem.cpp  PlayerDeathSystem.h  RenderComponentSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h  SpecialPowerMechanicSystem.cpp  SpecialPowerMechanicSystem.h  WorldSystem.cpp  WorldSystem.h
world_editor/: CMakeLists.txt
world_editor/src/: main.cpp  map_editor.cpp  map_editor.h  world_editor.cpp  world_editor.h
